10/2/22
	Most of the constraint additions here were inspired by Richard Stolk's Sudoku Variants Series on LMD. Thanks!
	Added support for not-RenbanLines, which supports an upgrade to the global non-consecutive functionality, allowing non-consecutive to be applied to longer strings of contiguous digits.
	Added support for anti-queen digits and cells, including partial anti-queen cells with no repeats on a single diagonal
	Updated Schrödinger cell functions and documentation.
	Added support for dominant clone regions, sets of regions where the digits in the first clone are greater than the corresponding digits in other clones.
	Added support for DoubleDoku
	Added support for capsules
	Added support for Missing Bulb Thermos, implemented for normal, slow, and OddEven thermos
	Added support for Descriptive Pairs
	Added support for Open-faced Sandwich Sums, aka Before Nine
	Added support for Missing Arrows
	Added support for Bent Diagonals
	Added support for Quad Maximum Parity Values, like Quad Max but only operating on digits of one parity. Two values, one of each parity, may be given.

9/30/22
	Added support for parity snakes
	Added support for No-Three-In-A-Row global constraint
	Added support for maximum triplet clues, and generalized to maximum runs of arbitrary length
	Added support for Search Nine clues.
	Modified setRossini method to not require row/column designation, which is clear from the arrow direction only.
	Updated constants for Left/Right to be distinct from Up/Down. Only impacted method is Rossini clues.
	Added support for Odd-Even Thermos (thermos where all digits are the same parity), and Slow Odd-Even Themors (same thing, but non-decreasing instead of increasing).
	Added Schrödinger test case.
	Thanks to Richard Stolk for the inspiration for most of the new constraints implemented in this push.

9/29/22
	Added support for parity count lines.
	Added support for reverse numbered rooms, and support for negative indices in numbered room clues